// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddImageForm component Matches the snapshot 1`] = `
<div
  data-testid="addImageForm"
>
  <h3
    className="MuiTypography-root makeStyles-heading-3 MuiTypography-h3"
  >
    Add Image
  </h3>
  <form
    className="makeStyles-form-1"
  >
    <div
      className="makeStyles-input-2"
    >
      <div
        data-testid="input"
      >
        <h5
          className="MuiTypography-root MuiTypography-h5"
        >
          Name
        </h5>
        <div
          className="makeStyles-styleInputFields-5"
          data-testid="inputField"
        >
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline"
            data-testid="inputAtom"
            onClick={[Function]}
            required={true}
            style={
              Object {
                "color": "#000",
              }
            }
          >
            <input
              className="MuiInputBase-input MuiInput-input"
              data-testid="name"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <p
        className="MuiTypography-root makeStyles-error-4 MuiTypography-body1"
      />
    </div>
    <div
      className="makeStyles-input-2"
    >
      <div
        data-testid="input"
      >
        <h5
          className="MuiTypography-root MuiTypography-h5"
        >
          Url
        </h5>
        <div
          className="makeStyles-styleInputFields-5"
          data-testid="inputField"
        >
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline"
            data-testid="inputAtom"
            onClick={[Function]}
            required={true}
            style={
              Object {
                "color": "#000",
              }
            }
          >
            <input
              className="MuiInputBase-input MuiInput-input"
              data-testid="url"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <p
        className="MuiTypography-root makeStyles-error-4 MuiTypography-body1"
      />
    </div>
    <div
      className="makeStyles-button-6"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        data-testid="button"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiTypography-root MuiTypography-button"
          >
             
            Add
          </span>
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`AddImageForm component Matches the snapshot when error is present 1`] = `
<div
  data-testid="addImageForm"
>
  <h3
    className="MuiTypography-root makeStyles-heading-3 MuiTypography-h3"
  >
    Add Image
  </h3>
  <form
    className="makeStyles-form-1"
  >
    <div
      className="makeStyles-input-2"
    >
      <div
        data-testid="input"
      >
        <h5
          className="MuiTypography-root MuiTypography-h5"
        >
          Name
        </h5>
        <div
          className="makeStyles-styleInputFields-5"
          data-testid="inputField"
        >
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline"
            data-testid="inputAtom"
            onClick={[Function]}
            required={true}
            style={
              Object {
                "color": "#000",
              }
            }
          >
            <input
              className="MuiInputBase-input MuiInput-input"
              data-testid="name"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <p
        className="MuiTypography-root makeStyles-error-4 MuiTypography-body1"
      >
        invalid name
      </p>
    </div>
    <div
      className="makeStyles-input-2"
    >
      <div
        data-testid="input"
      >
        <h5
          className="MuiTypography-root MuiTypography-h5"
        >
          Url
        </h5>
        <div
          className="makeStyles-styleInputFields-5"
          data-testid="inputField"
        >
          <div
            className="MuiInputBase-root MuiInput-root MuiInput-underline"
            data-testid="inputAtom"
            onClick={[Function]}
            required={true}
            style={
              Object {
                "color": "#000",
              }
            }
          >
            <input
              className="MuiInputBase-input MuiInput-input"
              data-testid="url"
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <p
        className="MuiTypography-root makeStyles-error-4 MuiTypography-body1"
      >
        invalid url
      </p>
    </div>
    <div
      className="makeStyles-button-6"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
        data-testid="button"
        disabled={true}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <span
            className="MuiTypography-root MuiTypography-button"
          >
             
            Add
          </span>
        </span>
      </button>
    </div>
  </form>
</div>
`;
